<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp" >

        <TextView
            android:id="@+id/textViewFormName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/loginformname"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewFormName"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textColor="#FFFFFF" />

       
        <Button
            android:id="@+id/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/editTextPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/login" />
        
        

         <TextView
             android:id="@+id/MessageforLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/LoginButton"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:text="@string/messageforLogin"
             android:textColor="#ffffff" />

         <Button
             android:id="@+id/RegisterButton"
             android:layout_width="150dp"
             android:layout_height="30dp"
             android:layout_below="@+id/MessageforLogin"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:background="@drawable/roundedbutton"
             android:text="@string/register" />

         <EditText
             android:id="@+id/editTextUserName"
             android:layout_width="match_parent"
             android:layout_height="25dp"
             android:layout_alignLeft="@+id/MessageforLogin"
             android:layout_alignParentRight="true"
             android:layout_alignTop="@+id/textViewUserName"
             android:background="@drawable/roundedtextview"
             android:ems="10"
             android:hint="@string/username"
             android:inputType="textPersonName"
             android:paddingLeft="15dp" >

             <requestFocus />
         </EditText>

         <TextView
             android:id="@+id/textViewPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/editTextUserName"
             android:layout_marginTop="18dp"
             android:text="@string/password"
             android:textColor="#FFFFFF" />

         <EditText
             android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="25dp"
             android:layout_alignLeft="@+id/editTextUserName"
             android:layout_alignParentRight="true"
             android:layout_alignTop="@+id/textViewPassword"
             android:background="@drawable/roundedtextview"
             android:ems="10"
             android:hint="@string/password"
             android:inputType="textPassword"
             android:paddingLeft="15dp" />

    </RelativeLayout>

</ScrollView>