<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="700dp" >

        <TextView
            android:id="@+id/textViewFormName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/registrationFormName"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewFormName"
            android:layout_marginTop="10dp"
            android:text="@string/firstname"
            android:textColor="#FFFFFF" />

        <requestFocus />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewFirstName"
            android:layout_marginTop="5dp"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:paddingLeft="15dp" />

        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextFirstName"
            android:layout_below="@+id/editTextFirstName"
            android:layout_marginTop="15dp"
            android:text="@string/lastname"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignLeft="@+id/textViewLastName"
            android:layout_below="@+id/textViewLastName"
            android:layout_marginTop="5dp"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:paddingLeft="15dp" />

        <TextView
            android:id="@+id/textViewUserGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editTextLastName"
            android:layout_marginTop="15dp"
            android:text="Address"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editTextPassword"
            android:layout_marginTop="50dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/register" />

        <TextView
            android:id="@+id/MessageforRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RegisterButton"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/textViewPhone"
            android:text="@string/messageforRegister"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_below="@+id/MessageforRegister"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/textViewUserName"
            android:background="@drawable/roundedbutton"
            android:text="@string/login" />

        <EditText
            android:id="@+id/EditText01"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewUserGender"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:hint="Address"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewEmail"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp" />

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textViewLastName"
            android:layout_below="@+id/editTextEmail"
            android:layout_marginTop="31dp"
            android:text="@string/phone"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewPhone"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingLeft="15dp" />

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewPhone"
            android:layout_below="@+id/editTextPhone"
            android:layout_marginTop="29dp"
            android:text="@string/username"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewUserName"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingLeft="15dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewPassword"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="15dp" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextUserName"
            android:layout_marginTop="21dp"
            android:layout_toLeftOf="@+id/MessageforRegister"
            android:text="@string/password"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewPassword"
            android:layout_below="@+id/EditText01"
            android:layout_marginTop="27dp"
            android:text="@string/email"
            android:textColor="#FFFFFF" />

    </RelativeLayout>

</ScrollView>