<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    tools:context=".WelcomeActivity">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="428dp" >

        <TextView
            android:id="@+id/ProjectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/projectname" />

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_below="@+id/ProjectName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/login" />

        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/LoginButton"
            android:layout_below="@+id/LoginButton"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/register" />
        
    </RelativeLayout>
    
</ScrollView>