<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@drawable/images4"
    
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewFormName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/ipformname"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewIPaddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewFormName"
            android:layout_marginTop="10dp"
            android:text="@string/ipAddress"
            android:textColor="#FFFFFF" />

        <!--
             <EditText
            android:id="@+id/editTextIPaddress"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewIPaddress"
            android:layout_marginTop="5dp"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:hint="@string/ipAddress"
            android:inputType="number"
            android:paddingLeft="15dp" />
        -->

        <TextView
            android:id="@+id/textViewipServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewIPaddress"
            android:layout_below="@+id/textViewIPaddress"
            android:layout_marginTop="15dp"
            android:text="@string/ipServer"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editTextipServer"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textViewipServer"
            android:layout_toRightOf="@+id/textViewIPaddress"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:hint="@string/ipServer"
            android:inputType="text"
            android:paddingLeft="15dp" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/IpSubmitButton"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/editTextipServer"
            android:layout_below="@+id/editTextipServer"
            android:layout_marginTop="22dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/ok" />

        <Button
            android:id="@+id/IpCancleButton"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/roundedbutton"
            android:text="CANCEL" />

    </RelativeLayout>

</ScrollView>